Version 2.0 - 2018-04-13
* FEA#8126 Add new claim process type for declaration and reopening
* FEA#8116 Add claim name column in claim view list when starting the declaration process
* FEA#7620 Add the method set_sub_status in order to update the claim sub status in the process configuration

Version 1.14 - 2017-11-09
* BUG#6891 Don't export loss description when exporting process
* BUG#6659 Fix an inconsistency in the claim documents calculation

Version 1.12 - 2017-04-28

Version 1.10 - 2016-11-02
* FEA#0000 Automatically initialize process data from current party / claim
* FEA#0000 Allow to choose process to launch from claim declaration wizard

Version 1.8 - 2016-07-06
* FEA#0000 Improved claim declaration wizard

Version 1.6 - 2015-12-23

Version 1.4 - 2015-05-29

Version 1.3 - 2015-01-22

Version 1.2 - 2014-07-01
* FEA#0000 Changelog file creation