@@ -8,6 +8,11 @@ this repository contains the full copyright notices and license terms. -->
             <field name="model">claim,-1</field>
             <field name="action" ref="process_cog.act_resume_process"/>
         </record>
+        <record model="ir.action.keyword" id="act_claim_start_process">
+            <field name="keyword">form_action</field>
+            <field name="model">claim,-1</field>
+            <field name="action" ref="declaration_process_launcher"/>
+        </record>
         <record model="ir.ui.view" id="process_form">
             <field name="model">process</field>
             <field name="inherit" ref="process.process_form"/>
