@@ -1,3 +1,5 @@
+* FEA#9423 Allow to start process from a claim
+
 Version 2.0 - 2018-04-13
 * FEA#8126 Add new claim process type for declaration and reopening
 * FEA#8116 Add claim name column in claim view list when starting the declaration process
